--- a/index.html
+++ b/index.html
@@ -1,96 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heitor Dreams</title>
-    <style>
-        /* CSS styles go here */
-        body { font-family: Arial, sans-serif; }
-        /* additional styles */
-    </style>
-</head>
-<body>
-    <div id="tiobrunoX" style="position: absolute; left: calc(12%);"> <!-- Position Tio Bruno -->
-        <h1>Tio Bruno's Repertório</h1>
-        <button onclick="iniciarInteracaoTioBruno()">Start Interaction</button>
-        <div id="menuRepertorio">
-            <!-- Menu will be populated by JavaScript -->
-        </div>
-    </div>
-
-    <script>
-        // JavaScript functions
-        function iniciarInteracaoTioBruno() {
-            // Initialize interaction
-            alert("Welcome to Tio Bruno's show!");
-            abrirMenuRepertorioBruno();
-        }
-
-        function abrirMenuRepertorioBruno() {
-            // Open repertoire menu
-            document.getElementById('menuRepertorio').innerHTML = `<ul>
-                <li onclick="escolherRepertorioBruno('Tina Fight')">Tina Fight</li>
-                <li onclick="escolherRepertorioBruno('Laura Battle')">Laura Battle</li>
-                <li onclick="escolherRepertorioBruno('Churros')">Churros</li>
-                <li onclick="escolherRepertorioBruno('Violin Music')">Violin Music</li>
-                <li onclick="escolherRepertorioBruno('Tavern Chaos')">Tavern Chaos</li>
-            </ul>`;
-        }
-
-        function fecharMenuRepertorioBruno() {
-            // Close menu
-            document.getElementById('menuRepertorio').innerHTML = '';  
-        }
-
-        function escolherRepertorioBruno(theme) {
-            // Choose repertoire
-            switch (theme) {
-                case 'Tina Fight':
-                    cantarRimaBruno('Tina Fight');
-                    break;
-                case 'Laura Battle':
-                    cantarRimaBruno('Laura Battle');
-                    break;
-                case 'Churros':
-                    cantarRimaBruno('Churros');
-                    break;
-                case 'Violin Music':
-                    cantarRimaBruno('Violin Music');
-                    break;
-                case 'Tavern Chaos':
-                    cantarRimaBruno('Tavern Chaos');
-                    break;
-            }
-            finalizarInteracaoTioBruno();
-        }
-
-        function cantarRimaBruno(theme) {
-            // Dialogue and rhymes based on theme
-            switch (theme) {
-                case 'Tina Fight':
-                    alert("Fighting words for Tina!");
-                    break;
-                case 'Laura Battle':
-                    alert("Laura's battle calls!");
-                    break;
-                case 'Churros':
-                    alert("Churros are delicious and sweet!");
-                    break;
-                case 'Violin Music':
-                    alert("Sweet sound of the violin!");
-                    break;
-                case 'Tavern Chaos':
-                    alert("Welcome to the tavern chaos!");
-                    break;
-            }
-        }
-
-        function finalizarInteracaoTioBruno() {
-            // End interaction
-            fecharMenuRepertorioBruno();
-            alert("Thanks for visiting Tio Bruno's show!");
-        }
-    </script>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang=\"pt-br\">\n<head>\n    <meta charset=\"UTF-8\">\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n    <title>Heitor Dreams</title>\n</head>\n<body>\n    <h1>Bem-vindo ao Heitor Dreams!</h1>\n    <script>\n        // Level 6 modifications\n        tiobrunoX = window.innerWidth * 0.12;\n        function iniciarInteracaoTioBruno() {\n            alert(\"Olá pequenino, tudo bem?\");\n            alert(\"Meu nome é Bruno, o Bardo! Canto histórias magníficas.\");\n            alert(\"Você, mesmo pequeno, tem cara de que já viveu muitas coisas, compartilhe comigo, cantarei histórias em seu nome!\");\n        }\n\n        function abrirMenuRepertorioBruno() {\n            alert(\"⚔️ A luta contra a Tina\");\n            alert(\"✋ Batalha contra a Laura\");\n            alert(\"🍪 O delicioso churros\");\n            alert(\"🎸 A música que ele tocou\");\n            alert(\"🍺 A bagunça da taberna\");\n        }\n\n        function fecharMenuRepertorioBruno() {\n            // Logic to close the menu\n            alert(\"Menu fechado!\");\n        }\n\n        function escolherRepertorioBruno(repertorio) {\n            // Logic to choose repertoire based on the selection\n            alert(\"Você escolheu: \" + repertorio);\n        }\n\n        function cantarRimaBruno(repertorio) {\n            switch (repertorio) {\n                case 'Tina':\n                    alert(\"Tina, uma guerreira em ação, Desafiando com garra, determinação!\");\n                    break;\n                case 'Laura':\n                    alert(\"Laura, firme com sua espada, Na batalha, brava e bem treinada!\");\n                    break;\n                case 'Churros':\n                    alert(\"Churros quentes, doce na mão, Uma alegria, pura satisfação!\");\n                    break;\n                case 'Violin':\n                    alert(\"Notas dançando, um som divinal, Música sagrada, um canto imortal!\");\n                    break;\n                case 'Taverna':\n                    alert(\"Na taberna, risos e confusão, Histórias e risadas em profusão!\");\n                    break;\n                default:\n                    alert(\"Repertório desconhecido!\");\n                    break;\n            }\n        }\n\n        function finalizarInteracaoTioBruno() {\n            alert(\"Brilhante! Cantarei histórias sobre você por todo o mundo jovem, obrigado.\");\n        }\n    <\/script>\n</body>\n</html>
